fix: update highlighted code line background color for better visibility

--- a/src/css/theming.css
+++ b/src/css/theming.css
@@ -44,7 +44,7 @@
   --docusaurus-added-code-line-bg: rgba(71, 187, 120, 0.1);
   --docusaurus-deleted-code-line-bg: rgba(229, 62, 62, 0.1);
   --docusaurus-edited-code-line-bg: rgba(10, 104, 255, 0.2);
-  --docusaurus-highlighted-code-line-bg: #bb800926;
+  --docusaurus-highlighted-code-line-bg: rgba(113, 232, 223, 0.1);
   --ifm-blockquote-border-color: transparent;
   --ifm-toc-padding-horizontal: 1rem;
   --docusaurus-details-decoration-color: transparent;
